RESOLVED FIXED146296
WebContent process is unreponsive/idle when WKWebView is inside a view service.
https://bugs.webkit.org/show_bug.cgi?id=146296
Summary WebContent process is unreponsive/idle when WKWebView is inside a view service.
Anders Carlsson
Reported 2015-06-24 16:23:42 PDT
WebContent process is unreponsive/idle when WKWebView is inside a view service.
Attachments
Patch (16.94 KB, patch)
2015-06-24 16:33 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-06-24 16:33:58 PDT
WebKit Commit Bot
Comment 2 2015-06-24 16:35:21 PDT
Attachment 255526 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:76: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:97: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:101: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2015-06-24 16:53:31 PDT
Comment on attachment 255526 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=255526&action=review > Source/WebKit2/UIProcess/ApplicationStateTracker.mm:51 > + if ([[NSBundle mainBundle].bundleIdentifier isEqualToString:@"com.apple.SafariViewService"]) Please try to find a better less layering-violating way to do this.
Anders Carlsson
Comment 4 2015-06-24 16:57:11 PDT
Note You need to log in before you can comment on or make changes to this bug.